Fixed navigation bar z-index

--- a/hobbies.css
+++ b/hobbies.css
@@ -262,7 +262,7 @@ a:hover {
   align-items: center;
   background-color: #212429;
   box-shadow: 2px 0 5px rgba(0, 0, 0, 0.2);
-  z-index: 1;
+  z-index: 10;
   padding-top: 100px;
   overflow: hidden;
   transition: transform 0.3s ease;
@@ -326,7 +326,7 @@ a:hover {
   background-color: #212429;
   cursor: pointer;
   transition: background-color 0.3s ease, color 0.3s ease, transform 0.3s ease; /* Smooth transition for hover effects */
-  z-index: 2;
+  z-index: 11;
 }
 
 .navicon-container:hover {
